# redrob-ranker

./: .gitignore  Dockerfile  README.md  SANDBOX.md  ablation_report.md  app.py  bias_audit.md  build_features.py  completed.md  holdout_labels.csv  holdout_report.md  progress.md  pyproject.toml  rank.py  reasoning_audit.py  requirements-app.txt  requirements-dev.txt  requirements.txt  runtime_report.md
.github/workflows/: ci.yml
config/: aliases.yaml  anti_patterns.yaml  jd_intents.yaml  regex_channels.yaml  skeletons.yaml  thresholds.yaml  weights.yaml
src/: config_loader.py  embeddings.py  feature_pipeline.py  io_utils.py  manifest.py  parsing.py  ranking.py  reasoning.py  reference_date.py  scoring.py
src/features/: anti_patterns.py  behavioral.py  education.py  (+8 more)
tests/: conftest.py  test_ablations.py  test_adversarial.py  test_anti_patterns.py  test_app.py  test_behavioral.py  test_bucket_recall.py  test_build_deck.py  test_build_features_e2e.py  test_education.py  test_embeddings.py  test_end_to_end.py  test_evidence_channels.py  test_experience_band.py  test_feature_pipeline.py  test_holdout.py  test_honeypot_ledger.py  test_manifest.py  test_must_haves.py  test_parsing.py  test_performance.py  test_rank_imports.py  test_ranking.py  test_reasoning.py  test_reasoning_audit.py  test_reasoning_diversity.py  test_scoring.py  test_skill_trust.py  test_stuffer_risk.py  test_tiering.py  test_title_career.py
tools/: ablations.py  build_deck.py  build_holdout.py  holdout_report.py  rebuild_features_parquet.py  runtime_report.py  vendor_model.py  weight_search.py
